--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body, html{
 h1{
 	font-size: 4rem;
 	color: #0e49cf;
+	text-transform: uppercase;
 /*	background-color: skyblue;
 	border-radius: 100px;*/
 }
