--- a/style.css
+++ b/style.css
@@ -1,42 +1,99 @@
-body, html{
-	width: 100%;
-	height: 100%;
-	font-family: 'Montserrat', sans-serif;
-	background: url(doctorimg3.jpg) no-repeat center center fixed;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;
-}
-h1{
-	font-size: 4rem;
-	color: #0e49cf;
-	text-transform: uppercase;
-/*	background-color: skyblue;
-	border-radius: 100px;*/
-}
-.buffer{
-	height: 10rem;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;1,100;1,200;1,300&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Poppins"; sans-serif;
 }
 
-.btn {
-	font-weight: 800;
-	border-radius: 300px;
-	border-color: darkblue;
-	text-transform: uppercase;
+section{
+    position: relative;
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    background: url(doctorimg3.jpg) no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 
-.btn-xl {
-	padding: 1rem 2rem;
+header{
+    position: relative;
+    top: 0;
+    width: 100%;
+    padding: 30px 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+header .logo{
+	background: url(edosa-logo.png) no-repeat center center/cover;
+	position: relative;
+	width: 200px;
+	height: 100px;
+	background-color: #114A9C;
+	background-size: contain;
+	border-radius: 10px;
+    transition: 0.3s;
+    transition-property: background;
+}
+header .navigation a{
+    color: #114A9C;
+    text-decoration: none;
+    font-weight: bold;
+    letter-spacing: 1px;
+    padding: 2px 15px;
+    border-radius: 20px;
+}
+header .navigation a:not(:last-child){
+    margin-right: 30px;
+}
+header .navigation a:hover{
+    background: skyblue;
+}
+.content{
+    max-width: 650px;
+    margin: 60px 100px;
+}
+.content .about h2{
+    color: darkcyan;
+    font-size: 55px;
+    text-transform: uppercase;
+    font-weight: 800;
+    letter-spacing: 2;
+    line-height: 60px;
+    margin-bottom: 30px;
+}
+.content .about p{
+    font-size: 16px;
+    font-weight: 500px;
+    margin-bottom: 40px;
+}
+.content .about h3{
+    font-size: 30px;
+    font-weight: 500px;
+    margin-bottom: 40px;
+}
+.content .getstarted-btn{
+    color: white;
+    background: #114A9C;
+    text-decoration: none;
+    border: none;
+    text-transform: uppercase;
+    font-weight: 700;
+    letter-spacing: 2px;
+    padding: 10px 20px;
+    border-radius: 10px;
+    transition: .3s;
+    transition-property: transform;
+    
+}
+.content .getstarted-btn:hover{
+    background: rgb(46, 162, 207);
+    transform: scale(1.2);
+    border: none;
 }
 
-.btn-primary{
-	background-color: blue;
-	border-color: darkblue;
-}
-.btn-primary:hover {
-	background-color: darkblue;
-	border-color: darkblue;
-	border-width: 5px;
-	box-shadow: black 20px 20px 10px;
-}
+
