--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;1,100;1,200;1,300&display=swap');
 
+
 *{
     margin: 0;
     padding: 0;
@@ -58,7 +59,7 @@ header .navigation a:hover{
     margin: 60px 100px;
 }
 .content .about h2{
-    color: darkcyan;
+    color: #296FD7;
     font-size: 55px;
     text-transform: uppercase;
     font-weight: 800;
@@ -91,9 +92,101 @@ header .navigation a:hover{
     
 }
 .content .getstarted-btn:hover{
-    background: rgb(46, 162, 207);
+    background: white;
+    color: #114A9C;
     transform: scale(1.2);
     border: none;
 }
+label{
+    display: none;
+}
+#check{
+    z-index: 3;
+    display: none;
+}
+
+/* Responsive Style */
+@media (max-width: 960px){
+    header .navigation{
+        display: none;
+    }
+    label{
+        display: block;
+        font-size: 25px;
+        cursor: pointer;
+        transition: 0.3s;
+        transition-property: color;
+    }
+    label:hover{
+        color: #114A9C;
+        transform: scale(1.2);
+    
+    }
+    label .close-btn{
+        display: none;
+    }
+
+    #check:checked ~ header .navigation{
+        z-index: 2;
+        position: fixed;
+        background: rgba(114,223,255,0.9);
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    #check:checked ~ header .navigation a{
+        font-weight: 700;
+        margin-right: 0;
+        margin-bottom: 50px;
+        letter-spacing: 2px;
+    }
+    #check:checked ~ header label .menu-btn{
+        display: none;
+    }
+    #check:checked ~ header label .close-btn{
+        z-index: 2;
+        display: block;
+        position: fixed;
+    }
+
+    label .menu-btn{
+        position: absolute;
+    }
+    
+    /* header .logo{
+        position: absolute;
+        bottom: -6px;
+    } */
+    .content .about h2{
+        font-size: 45px;
+        line-height: 50px;
+    }
+    .content .about p{
+        font-size: 14px;
+    }
+    .content .about h3{
+        font-size: 40px;
+        font-weight: 600;
+    }
+}
 
 
+@media (max-width: 560px) {
+    .content .about h2{
+        font-size: 35px;
+        line-height: 40px;
+    }
+    .content .about p{
+        font-size: 14px;
+    }
+    .content .about h3{
+        font-size: 30px;
+        font-weight: 600;
+    }
+
+}
