--- a/style.css
+++ b/style.css
@@ -1,193 +1,65 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;1,100;1,200;1,300&display=swap');
-
-
 *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins"; sans-serif;
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
 }
+.zone{
+	height: 100vh;
+	width: 100%;
+	background-image: url(doctorimg3.jpg);
+	background-size: cover;
+	background-position: center;
+}
+nav{
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding-top: 40px;
+	padding-left: 10%;
+	padding-right: 10%;
+	position: fixed;
+	top: 0;
+	width: 100%;
 
-section{
-    position: relative;
-    width: 100%;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    background: url(doctorimg3.jpg) no-repeat;
-    background-size: cover;
-    background-position: center;
 }
-
-header{
-    position: relative;
-    top: 0;
-    width: 100%;
-    padding: 30px 100px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-header .logo{
+.logo {
+	/* color: #114A9C;
+	font-size: 40px; */
 	background: url(edosa-logo.png) no-repeat center center/cover;
 	position: relative;
-	width: 200px;
+	width: 180px;
 	height: 100px;
 	background-color: #114A9C;
 	background-size: contain;
-	border-radius: 10px;
-    transition: 0.3s;
-    transition-property: background;
+	border-radius: 20px;
 }
-header .navigation a{
-    color: #114A9C;
-    text-decoration: none;
-    font-weight: bold;
-    letter-spacing: 1px;
-    padding: 2px 15px;
-    border-radius: 20px;
+nav ul li{
+	list-style-type: none;
+	display: inline-block;
+	padding: 10px 20px;
 }
-header .navigation a:not(:last-child){
-    margin-right: 30px;
-}
-header .navigation a:hover{
-    background: skyblue;
-}
-.content{
-    max-width: 650px;
-    margin: 60px 100px;
-}
-.content .about h2{
-    color: #296FD7;
-    font-size: 55px;
-    text-transform: uppercase;
-    font-weight: 800;
-    letter-spacing: 2;
-    line-height: 60px;
-    margin-bottom: 30px;
-}
-.content .about p{
-    font-size: 16px;
-    font-weight: 500px;
-    margin-bottom: 40px;
-}
-.content .about h3{
-    font-size: 30px;
-    font-weight: 500px;
-    margin-bottom: 40px;
-}
-.content .getstarted-btn{
-    color: white;
-    background: #114A9C;
-    text-decoration: none;
-    border: none;
-    text-transform: uppercase;
-    font-weight: 700;
-    letter-spacing: 2px;
-    padding: 10px 20px;
-    border-radius: 10px;
-    transition: .3s;
-    transition-property: transform;
-    
-}
-.content .getstarted-btn:hover{
-    background: white;
-    color: #114A9C;
-    transform: scale(1.2);
-    border: none;
-}
-label{
-    display: none;
-}
-#check{
-    z-index: 3;
-    display: none;
+nav ul li a {
+	color: #114A9C;
+	text-decoration: none;
+	font-weight: bold;
+	text-transform: uppercase;
 }
 
-/* Responsive Style */
-@media (max-width: 960px){
-    header .navigation{
-        display: none;
-    }
-    label{
-        display: block;
-        font-size: 25px;
-        cursor: pointer;
-        transition: 0.3s;
-        transition-property: color;
-    }
-    label:hover{
-        color: #114A9C;
-        transform: scale(1.2);
-    
-    }
-    label .close-btn{
-        display: none;
-    }
-
-    #check:checked ~ header .navigation{
-        z-index: 2;
-        position: fixed;
-        background: rgba(114,223,255,0.9);
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-    #check:checked ~ header .navigation a{
-        font-weight: 700;
-        margin-right: 0;
-        margin-bottom: 50px;
-        letter-spacing: 2px;
-    }
-    #check:checked ~ header label .menu-btn{
-        display: none;
-    }
-    #check:checked ~ header label .close-btn{
-        z-index: 2;
-        display: block;
-        position: fixed;
-        
-    }
-
-    label .menu-btn{
-        position: absolute;
-    }
-    
-    /* header .logo{
-        position: absolute;
-        bottom: -6px;
-    } */
-    .content .about h2{
-        font-size: 45px;
-        line-height: 50px;
-    }
-    .content .about p{
-        font-size: 14px;
-    }
-    .content .about h3{
-        font-size: 40px;
-        font-weight: 600;
-    }
+nav ul li a:hover{
+	color: red;
+	transition: .3s;
 }
-
-
-@media (max-width: 560px) {
-    .content .about h2{
-        font-size: 35px;
-        line-height: 40px;
-    }
-    .content .about p{
-        font-size: 14px;
-    }
-    .content .about h3{
-        font-size: 30px;
-        font-weight: 600;
-    }
-
+button{
+	border: none;
+	color: white;
+	background: #114A9C;
+	padding: 12px 30px;
+	border-radius: 40px;
+	font-weight: bold;
+	font-size: 15px;
+	transition: .4s;
+}
+button:hover{
+	transform: scale(1.3);
+	cursor: pointer;
 }
