--- a/login.css
+++ b/login.css
@@ -1,152 +1,303 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;1,100;1,200;1,300&display=swap');
 
 
-body{
+*{
     margin: 0;
     padding: 0;
-    font-family: "Poppins"; sans-serif;
-    background-color: #326ABD;
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
 }
 
-/* Container */
-.container{
+body{
     display: flex;
-    height: 800px;
-    width: 1000px;
-    margin: auto;
-    margin-top: 150px;
-    box-shadow: 40px 40px 40px black;
-    
-}
-/* Login Form */
-.form{
-    display: flex;
-    border-top-left-radius: 25px;
-    border-bottom-left-radius: 25px;
-    flex-direction: column;
-    width: 50%;
     align-items: center;
-    background-color: whitesmoke;
-    
+    justify-content: center;
+    min-height: 100vh;
+    background: #326ABD;
 }
-.form h2{
-    text-align: center;
-    padding: 0 0 20px 0;
-    font-size: 2rem;
+
+.container{
+    position: relative;
+    width: 70vw;
+    height: 80vh;
+    background: whitesmoke;
+    border-radius: 15px;
+    box-shadow: 40px 40px 40px black;
+    overflow: hidden;
+}
+.container::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -50%;
+    width: 100%;
+    height: 100%;
+    border-radius: 15px;
+    background: linear-gradient(-45deg, whitesmoke, #11499C);
+    z-index: 6;
+    transform: translateX(100%);
+    transition: 1s ease-in-out;
+}
+
+.signIn-Up{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    z-index: 5;
+}
+
+form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 40%;
+    min-width: 238px;
+    padding: 0 10px;
+}
+form.sign-in-form {
+    opacity: 1;
+    transition: 0.5s ease-in-out;
+    transition-delay: 1s;
+}
+form.sign-up-form {
+    opacity: 0;
+    transition: 0.5s ease-in-out;
+    transition-delay: 1s;
+}
+
+.title {
+    font-size: 35px;
+    color: #11499C;
+    margin-bottom: 10px;
     text-transform: uppercase;
 }
-.form h1{
-    background: url(edosa-logo2.png) no-repeat center center/cover;
+
+.input-field {
+    width: 100%;
+    height: 50px;
+    background: white;
+    margin: 10px 0;
+    border: 2px solid #11499C;
+    border-radius: 50px;
+    display: flex;
+    align-items: center;
+    color: red;
+}
+
+.input-field i{
+    flex: 1;
+    text-align: center;
+    color:#326ABD;
+    font-size: 18px;
+}
+
+.input-field input{
+    flex: 5;
+    background: none;
+    border: none;
+    outline: none;
+    width: 100%;
+    font-size: 18px;
+    font-weight: 600;
+    color: black;
+}
+
+.forgotpass{
+    margin: -5px 0 5px 5px;
+    color: #114A9C;
+    cursor: pointer;
+}
+.forgotpass:hover{
+    text-decoration: underline;
+    color: red;
+}
+
+.btn{
+    width: 150px;
+    height: 50px;
+    border: none;
+    border-radius: 50px;
+    background: #11499C;
+    color: whitesmoke;
+    font-weight: 600;
+    cursor: pointer;
+
+    margin-bottom: 10px 0;
+    text-transform: uppercase;
+}
+.btn:hover{
+    transform: scale(1.1);
+    background: #326ABD;
+}
+
+.social-text{
+    margin: 10px 0;
+    font-size: 16px;
+}
+.social-media{
+    display: flex;
+    justify-content: center;
+}
+.social-icon{
+    height: 45px;
+    width: 45px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color:#114A9C;
+    border: 1px solid #114A9C;
+    border-radius: 50px;
+    margin: 0 5px;
+}
+a{
+    text-decoration: none;
+}
+.social-icon:hover{
+    transform: scale(1.2);
+    transition: 0.5s;
+    border-color: red;
+    color: red;
+}
+.panels-container{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.panel { 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    width: 35%;
+    min-width: 238px;
+    padding: 0 10px;
+    text-align: center;
+    z-index: 6;
+}
+
+.left-panel{
+    pointer-events: none;
+}
+
+.content{
+    color: whitesmoke;
+    transition: 1.1s ease-in-out;
+    transition-delay: 0.5s;
+}
+.panel h3{
+    background: url(/images/edosa-logo2.png) no-repeat center center/cover;
 	position: relative;
 	width: 100%;
 	height: 200px;
 	background-size: contain;
 	border-radius: 10px;
     transition: 0.3s;
-    transition-property: background;
-    border-bottom: 1px solid silver;
 }
-form .text_field{
-    position: relative;
-    border-bottom: 2px solid #adadad;
-    margin: 30px 0;
-}
-.text_field input{
-    width: 100%;
-    padding: 0 5px;
-    height: 40px;
-    font-size: 16px;
-    border: none;
-    background: none;
-    outline: none;
-}
-.text_field label{
-    position: absolute;
-    top: 50%;
-    left: 5px;
-    color: #adadad;
-    transform: translateY(-50%);
-    font-size: 16px;
-    pointer-events: none;
-    transition: 0.5s;
-}
-.text_field span::before{
-    content: '';
-    position: absolute;
-    top: 40px
-    left: 0;
-    width: 0%;
-    height: 2px;
-    background: red;
-    transition: 0.5s;
 
+.panel h4{
+    font-size: 24px;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+
+.image{
+  
+    width: 100%;
+    transition: 1.1s ease-in-out;
+    transition-delay: 0.4s;
     
 }
-.text_field input:focus ~ label,
-.text_field input:valid ~ label{
-    top: -5px;
-    color: #114A9C;
 
+.left-panel .image,
+.left-panel .content{
+    transform: translateX(-200%);
 }
-.text_field input:focus ~ span::before,
-.text_field input:valid ~ span::before{
-    width: 100%;
-
-}
-.pass{
-    margin: -5px 0 20px 5px;
-    color: #114A9C;
-    cursor: pointer;
-}
-.pass:hover{
-    text-decoration: underline;
-    color: red;
-}
-input[type="submit"]{
-    width: 50%;
-    height: 50px;
-    border: 1px solid;
-    background: #114A9C;
-    border-radius: 40px;
-    cursor: pointer;
-    color: white;
-    border: none;
-    text-transform: uppercase;
-    font-weight: 700;
-    font-size: 18px;
-    letter-spacing: 2px;
-    padding: 10px 20px;
-    transition: .3s;
-    transition-property: transform;
-    outline: none;
+.right-panel .image,
+.right-panel .content{
+    transform: translateX(0%);
 }
 
-input[type="submit"]:hover{
-    border: none;
-    transition: 0.5s;
-    transform: scale(1.1);
+.account-text{
+    display: none;
 }
-.signup_link{
-    margin: 30px 0;
-    text-align: center;
+
+
+
+/* Animation */
+.container.sign-up-mode::before{
+    transform: translateX(0);
 }
-.signup_link a{
-    text-decoration: none;
-    color: #114A9C;
+
+.container.sign-up-mode .right-panel .image,
+.container.sign-up-mode .right-panel .content{
+    transform: translateX(200%);
 }
-.signup_link a:hover{
-    text-decoration: underline;
-    color: red;
+
+.container.sign-up-mode .left-panel .image,
+.container.sign-up-mode .left-panel .content{
+    transform: translateX(0%);
 }
-/* Right Side */
-.side{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50%;
-    background-color: #114A9C;
+
+.container.container.sign-up-mode form.sign-in-form{
+    opacity: 0;
 }
-.side img{
-    width: 900px;
-    height: 600px;
+.container.container.sign-up-mode form.sign-up-form{
+    opacity: 1;
+}
+.container.container.sign-up-mode .right-panel{
+    pointer-events: none;
+}
+.container.container.sign-up-mode .left-panel{
+    pointer-events: all;
+}
+
+/* Responsive UI */
+
+@media (max-width:779px){
+    .container{
+        width: 100vw;
+        height: 100vh
+    }
+}
+@media(max-width:635px){
+    .container::before{
+        display: none;
+    }
+    form{
+        width: 80%;
+    }
+    form.sign-up-form{
+        display: none;
+    }
+    .container.sign-up-mode2 form.sign-up-form{
+        display: flex;
+        opacity: 1;
+    }
+    .container.sign-up-mode2 form.sign-in-form{
+        display: none;
+    }
+    .panels-container{
+        display: none;
+    }
+    .account-text{
+        display: initial;
+        margin-top: 30px;
+    }
+}
+@media (max-width:360px) {
+    form {
+        width: 90%;
+    }
 }
