--- a/login.css
+++ b/login.css
@@ -7,6 +7,25 @@
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
 }
+ 
+.back-btn{
+    width: 100px;
+    height: 40px;
+    border: none;
+    border-radius: 50px;
+    background: #11499C;
+    color: whitesmoke;
+    font-weight: 600;
+    cursor: pointer;
+    margin-left: 10px;
+    margin-top: 20px;
+    text-transform: uppercase;
+}
+
+.back-btn:hover {
+    transform: scale(1.1);
+    cursor: pointer;
+}
 
 body{
     display: flex;
@@ -25,6 +44,7 @@ body{
     box-shadow: 40px 40px 40px black;
     overflow: hidden;
 }
+
 .container::before{
     content: "";
     position: absolute;
@@ -60,11 +80,13 @@ form {
     min-width: 238px;
     padding: 0 10px;
 }
+
 form.sign-in-form {
     opacity: 1;
     transition: 0.5s ease-in-out;
     transition-delay: 1s;
 }
+
 form.sign-up-form {
     opacity: 0;
     transition: 0.5s ease-in-out;
@@ -113,6 +135,7 @@ form.sign-up-form {
     color: #114A9C;
     cursor: pointer;
 }
+
 .forgotpass:hover{
     text-decoration: underline;
     color: red;
@@ -127,10 +150,10 @@ form.sign-up-form {
     color: whitesmoke;
     font-weight: 600;
     cursor: pointer;
-
     margin-bottom: 10px 0;
     text-transform: uppercase;
 }
+
 .btn:hover{
     transform: scale(1.1);
     background: #326ABD;
@@ -140,10 +163,12 @@ form.sign-up-form {
     margin: 10px 0;
     font-size: 16px;
 }
+
 .social-media{
     display: flex;
     justify-content: center;
 }
+
 .social-icon{
     height: 45px;
     width: 45px;
@@ -155,15 +180,18 @@ form.sign-up-form {
     border-radius: 50px;
     margin: 0 5px;
 }
+
 a{
     text-decoration: none;
 }
+
 .social-icon:hover{
     transform: scale(1.2);
     transition: 0.5s;
     border-color: red;
     color: red;
 }
+
 .panels-container{
     position: absolute;
     top: 0;
@@ -196,6 +224,7 @@ a{
     transition: 1.1s ease-in-out;
     transition-delay: 0.5s;
 }
+
 .panel h3{
     background: url(images/edosa-logo2.png) no-repeat center center/cover;
 	position: relative;
@@ -224,6 +253,7 @@ a{
 .left-panel .content{
     transform: translateX(-200%);
 }
+
 .right-panel .image,
 .right-panel .content{
     transform: translateX(0%);
@@ -271,6 +301,9 @@ a{
         height: 100vh
     }
 }
+
+
+
 @media(max-width:635px){
     .container::before{
         display: none;
@@ -296,6 +329,8 @@ a{
         margin-top: 30px;
     }
 }
+
+
 @media (max-width:360px) {
     form {
         width: 90%;
