--- a/login.css
+++ b/login.css
@@ -52,7 +52,7 @@ body{
     left: -50%;
     width: 100%;
     height: 100%;
-    border-radius: 15px;
+    /* border-radius: 15px; */
     background: linear-gradient(-45deg, whitesmoke, #11499C);
     z-index: 6;
     transform: translateX(100%);
@@ -154,7 +154,7 @@ form.sign-up-form {
     text-transform: uppercase;
 }
 
-.btn:hover{
+.btn:active{
     transform: scale(1.1);
     background: #326ABD;
 }
@@ -298,10 +298,9 @@ a{
 @media (max-width:779px){
     .container{
         width: 100vw;
-        height: 100vh
+        height: 100vh;
     }
 }
-
 
 
 @media(max-width:635px){
