--- a/doctor-dboard.css
+++ b/doctor-dboard.css
@@ -73,6 +73,7 @@ body{
     border-bottom: 2px solid #114A9c;
 }
 
+
 .main {
     position: absolute;
     width: calc(100% - 300px);
@@ -290,6 +291,16 @@ td i{
     }
     .top-bar{
         width: calc(100% - 60px);
+    }
+    .sidebar h1{
+        background: url(images/edosa-logo3.png) no-repeat center center/cover;
+        position: relative;
+        width: 100%;
+        height: 100px;
+        background-size: contain;
+        transition: 0.3s;
+        align-items: center;
+        border-bottom: 2px solid #114A9c;
     }
 }
 @media(max-width:860px){
